Added ability to render and edit React components live

--- a/posts/2019-07-01-code-blocks/index.mdx
+++ b/posts/2019-07-01-code-blocks/index.mdx
@@ -8,8 +8,7 @@ published: true
 
 Here is the `Dump` component!
 
-```jsx
-import React from 'react';
+```jsx react-live
 
 const Dump = props => (
   <div
@@ -30,5 +29,5 @@ const Dump = props => (
   </div>
 );
 
-export default Dump;
+render(<Dump props={[1,2,3,4,5]} />);
 ```
