Added support for projects type

--- a/projects/2017/2017-06-01-project1/index.mdx
+++ b/projects/2017/2017-06-01-project1/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: Hello World - from mdx!
-date: 2019-06-01
+title: Project 1
+date: 2017-06-01
 published: true
-type: post
+type: project
 ---
 
 # h1 Heading
