--- a/projects/2018/2018-06-10-project3/index.mdx
+++ b/projects/2018/2018-06-10-project3/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: Second Post!
-date: 2019-06-10
+title: Project 3
+date: 2018-06-10
 published: true
-type: post
+type: project
 cover: ./cover.jpg
 ---
 
