--- a/projects/2018/2018-07-01-project4/index.mdx
+++ b/projects/2018/2018-07-01-project4/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: Code Blocks
-date: 2019-07-01
+title: Project 4
+date: 2018-07-01
 published: true
-type: post
+type: project
 cover: ./cover.jpg
 ---
 
