--- a/projects/2017/2017-06-20-project2/index.mdx
+++ b/projects/2017/2017-06-20-project2/index.mdx
@@ -1,8 +1,8 @@
 ---
-title: Third Post!
-date: 2019-06-20
+title: Project 2
+date: 2017-06-20
 published: true
-type: post
+type: project
 cover: ./cover.jpg
 ---
 
