Added About and Projects section to index page

--- a/projects/2017/2017-06-01-project1/index.mdx
+++ b/projects/2017/2017-06-01-project1/index.mdx
@@ -3,6 +3,8 @@ title: Project 1
 date: 2017-06-01
 published: true
 type: project
+cover: ./cover.jpg
+tags: [HTML, CSS, JavaScript]
 ---
 
 # h1 Heading
