Updated projects section

--- a/projects/2017/2017-06-01-project1/index.mdx
+++ b/projects/2017/2017-06-01-project1/index.mdx
@@ -4,7 +4,7 @@ date: 2017-06-01
 published: true
 type: project
 cover: ./cover.jpg
-tags: [HTML, CSS, JavaScript]
+tags: [html, css, javascript]
 ---
 
 # h1 Heading
