--- a/projects/2017/2017-06-20-project2/index.mdx
+++ b/projects/2017/2017-06-20-project2/index.mdx
@@ -4,7 +4,7 @@ date: 2017-06-20
 published: true
 type: project
 cover: ./cover.jpg
-tags: [Android, Java]
+tags: [android, java]
 ---
 
 This is my third post!
