Added download notice

--- a/posts/2020/rating_predictor/index.mdx
+++ b/posts/2020/rating_predictor/index.mdx
@@ -775,4 +775,4 @@ Built a Flask application that predicts the rating of any review. Please visit t
 
 You can also see a demo of this application on [YouTube](https://www.youtube.com/watch?v=97LN1FVY6gU)
 
-A copy of the dataset and it's pickle files are available [here](https://drive.google.com/open?id=1uW3E6lwW0A9ay30Q6LLcoUAHYBE9pQUk) and the IPython Notebook can be downloaded from [here](/rating_predictor.ipynb)
+A copy of the dataset and it's pickle files are available [here](https://drive.google.com/open?id=1uW3E6lwW0A9ay30Q6LLcoUAHYBE9pQUk) and the IPython Notebook can be downloaded from [here](/rating_predictor.ipynb) **(Right-click and Save As to download the file)**
