Added git pre-requisite

--- a/posts/2020/dsc-iris-spa/index.mdx
+++ b/posts/2020/dsc-iris-spa/index.mdx
@@ -32,6 +32,9 @@ You can download it for Chrome [here](https://chrome.google.com/webstore/detail/
 
 You will need to have NodeJS installed on your system as we need npm to install Gatsby CLI and the dependencies we need to build our website. Download and install the LTS version for your operating system from [here](https://nodejs.org/en/download/).
 
+## Git
+You will need to have Git installed for the commands mentioned below to work. Please install the right version for your system from [here](https://git-scm.com/download/win)
+
 ## Gatsby CLI
 
 Once you have NodeJS installed and set up, open up your terminal. You can install `gatsby-cli` by running `npm install -g gatsby-cli`
